+4th semester data

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 
     <hr>
 
-    <h2 class="header-bawah">Semester 4 (DATA NOT FOUND)</h2>
+    <h2 class="header-bawah">Semester 4</h2>
     <table class="tabel-tengah">
         <tr>
             <td class="bold text-mid" colspan="4">Pengetahuan</td>
@@ -758,38 +758,38 @@
         <tr>
             <td>1</td>
             <td>Pendidikan Agama Islam dan Budi pekerti</td>
-            <td></td>
-            <td></td>
+            <td>89</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Pendidikan Pancasila dan Kewarganegaraan</td>
-            <td></td>
-            <td></td>
+            <td>86</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Bahasa Indonesia</td>
-            <td></td>
-            <td></td>
+            <td>94</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Matematika (Umum)</td>
-            <td></td>
-            <td></td>
+            <td>93</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>5</td>
             <td>Sejarah Indonesia</td>
-            <td></td>
-            <td></td>
+            <td>94</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>6</td>
             <td>Bahasa Inggris</td>
-            <td></td>
-            <td></td>
+            <td>94</td>
+            <td>A</td>
         </tr>
         <tr>
             <td colspan="4" class="bold">Kelompok B</td>
@@ -797,26 +797,26 @@
         <tr>
             <td>1</td>
             <td>Seni Budaya</td>
-            <td></td>
-            <td></td>
+            <td>94</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Pendidikan Jasmani Olahraga dan Kesehatan</td>
-            <td></td>
-            <td></td>
+            <td>91</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Prakarya dan Kewirausahaan</td>
-            <td></td>
-            <td></td>
+            <td>95</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Muatan Lokal Bahasa Daerah</td>
-            <td></td>
-            <td></td>
+            <td>87</td>
+            <td>B</td>
         </tr>
         <tr>
             <td colspan="4" class="bold">Kelompok C</td>
@@ -824,38 +824,38 @@
         <tr>
             <td>1</td>
             <td>Kimia</td>
-            <td></td>
-            <td></td>
+            <td>92</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Fisika</td>
-            <td></td>
-            <td></td>
+            <td>87</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Biologi</td>
-            <td></td>
-            <td></td>
+            <td>91</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Matematika (Peminatan)</td>
-            <td></td>
-            <td></td>
+            <td>91</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>5</td>
             <td>Teknologi Informasi dan Komunikasi</td>
-            <td></td>
-            <td></td>
+            <td>95</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>6</td>
             <td>Bahasa dan Sastra Inggris</td>
-            <td></td>
-            <td></td>
+            <td>95</td>
+            <td>A</td>
         </tr>
     </table>
     <br>
@@ -875,38 +875,38 @@
         <tr>
             <td>1</td>
             <td>Pendidikan Agama Islam dan Budi pekerti</td>
-            <td></td>
-            <td></td>
+            <td>90</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Pendidikan Pancasila dan Kewarganegaraan</td>
-            <td></td>
-            <td></td>
+            <td>86</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Bahasa Indonesia</td>
-            <td></td>
-            <td></td>
+            <td>92</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Matematika (Umum)</td>
-            <td></td>
-            <td></td>
+            <td>93</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>5</td>
             <td>Sejarah Indonesia</td>
-            <td></td>
-            <td></td>
+            <td>93</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>6</td>
             <td>Bahasa Inggris</td>
-            <td></td>
-            <td></td>
+            <td>90</td>
+            <td>B</td>
         </tr>
         <tr>
             <td colspan="4" class="bold">Kelompok B</td>
@@ -914,26 +914,26 @@
         <tr>
             <td>1</td>
             <td>Seni Budaya</td>
-            <td></td>
-            <td></td>
+            <td>95</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Pendidikan Jasmani Olahraga dan Kesehatan</td>
-            <td></td>
-            <td></td>
+            <td>91</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Prakarya dan Kewirausahaan</td>
-            <td></td>
-            <td></td>
+            <td>95</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Muatan Lokal Bahasa Daerah</td>
-            <td></td>
-            <td></td>
+            <td>86</td>
+            <td>B</td>
         </tr>
         <tr>
             <td colspan="4" class="bold">Kelompok C</td>
@@ -941,38 +941,38 @@
         <tr>
             <td>1</td>
             <td>Kimia</td>
-            <td></td>
-            <td></td>
+            <td>92</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>2</td>
             <td>Fisika</td>
-            <td></td>
-            <td></td>
+            <td>86</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>3</td>
             <td>Biologi</td>
-            <td></td>
-            <td></td>
+            <td>92</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>4</td>
             <td>Matematika (Peminatan)</td>
-            <td></td>
-            <td></td>
+            <td>91</td>
+            <td>B</td>
         </tr>
         <tr>
             <td>5</td>
             <td>Teknologi Informasi dan Komunikasi</td>
-            <td></td>
-            <td></td>
+            <td>94</td>
+            <td>A</td>
         </tr>
         <tr>
             <td>6</td>
             <td>Bahasa dan Sastra Inggris</td>
-            <td></td>
-            <td></td>
+            <td>96</td>
+            <td>A</td>
         </tr>
     </table>
 
